--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,4 @@
 .footer{
-    background-color: aqua;
     text-align: center;
     position: fixed;
     bottom: 0px;
@@ -9,8 +8,7 @@
 }
 
 .footer img{
-    width: 50px;
-    margin: 10px;
+    height: 50px;
 }
 
 .footer img:hover{
