--- a/src/pages/SideBar/Sidebar.css
+++ b/src/pages/SideBar/Sidebar.css
@@ -1,16 +1,17 @@
 .SideBar-menu {
-    display: flex;
-    flex-direction: column;
-    width: 150px;
-    background-color: rgb(255, 255, 255);
-    padding: 20px;
-    box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-    gap: 15px;
-
+  display: flex;
+  flex-direction: column;
+  width: 150px;
+  background-color: rgb(255, 255, 255);
+  padding: 20px;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  gap: 15px;
+  justify-content: center;
+  align-items: center;
 }
 
 .SideBar-menu button {
-background-color: rgb(125, 140, 214);
+  background-color: rgb(125, 140, 214);
   border: none;
   color: white;
   padding: 15px;
