--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
-*{
-    font-family: "Public Sans", sans-serif;
-    margin: 10px;
-    background-color: #A8D0E6;
+* {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
 }
-
