Ajustes de estilos en NavBar y MainBoard hechos

--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -2,8 +2,10 @@
     display:flex;
     justify-content: space-evenly;
     background-color: #90AFC5;
+    align-items: center;
 }
 
 .img-navbar {
-    width: 30px;
+    width: 80px;
+    height: 80px;
 }
