--- a/src/pages/ColumnTask/ColumnTask.css
+++ b/src/pages/ColumnTask/ColumnTask.css
@@ -1,15 +1,9 @@
-.columnTask{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-
-}
-
 .tasks{
     display: flex;
-    flex-direction: row;
     justify-content: center;
-    
+    flex-direction: row;
+    text-align: center;
+    width: 100%;
 }
 
 .toDo{
