--- a/src/pages/TaskCard/TaskCard.css
+++ b/src/pages/TaskCard/TaskCard.css
@@ -1,9 +1,16 @@
 .boxToDo{
-    background-color: rgb(161, 238, 247);
-    border: 2px;
-    box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+    border: solid black 1px;
+    box-shadow: 10px 2px 10px rgba(44, 41, 41, 0.2);
     margin: 10px;
     padding: 10px;
     text-align: center;
-    background-color: #A8D0E6;
+    background-color: #90AFC5;
+    border-radius: 10px;
+}
+
+.cardSelections{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
 }
