--- a/src/pages/TaskCard/TaskCard.css
+++ b/src/pages/TaskCard/TaskCard.css
@@ -1,16 +1,34 @@
-.boxToDo{
-    border: solid black 1px;
-    box-shadow: 10px 2px 10px rgba(44, 41, 41, 0.2);
-    margin: 10px;
-    padding: 10px;
-    text-align: center;
-    background-color: #90AFC5;
-    border-radius: 10px;
+.boxToDo {
+  border: none black 1px;
+  box-shadow: 10px 2px 10px rgba(44, 41, 41, 0.15);
+  margin: 10px;
+  padding: 10px;
+  text-align: center;
+  background-color: #90afc5;
+  border-radius: 10px;
 }
 
-.cardSelections{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 5px;
+.cardSelections {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+}
+
+.boxToDo button {
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.boxToDo select {
+  border-radius: 5px;
+  cursor: pointer;
+  padding: 5px;
+}
+
+.btn-taskDetail {
+    border: solid rgb(0, 0, 0) 1px;
+    background-color: white;
+    color:black;
+    padding: 5px;
 }
